# nanodac_module

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  node.settings.yaml  pyproject.toml
docs/: Configuration.md
src/: nanodac_interface.py  nanodac_rest_node.py
tests/: test_nanodac_interface.ipynb  test_nanodac_node.ipynb
